Bug 1793599 - Queue initial windowless imap URLs to avoid system hang at startup. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D159012

--HG--
extra : amend_source : 3949c141d4b6e2c0fbdb037c01f3de00e21456cd